tests/baselines/reference/parserStrictMode1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode1.ts (4 errors) ====
    foo1();
    ~~~~
!!! error TS2304: Cannot find name 'foo1'.
    foo1();
    ~~~~
!!! error TS2304: Cannot find name 'foo1'.
    foo1();
    ~~~~
!!! error TS2304: Cannot find name 'foo1'.
    static();
    ~~~~~~
!!! error TS2304: Cannot find name 'static'.